--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ homepage: https://github.com/knopp/msgpack_dart
 environment:
     sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
+dependencies:
+  universal_io: ^1.0.1
+
 dev_dependencies:
     test: ^1.3.0
     msgpack2: ^2.0.0+1
